tests/invalid/Type_Invalid_11.whiley
int ZERO = 0

type nat is (int x) where x >= ZERO